--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,7 +39,6 @@
     "src/scripts/createRedirects.js",
     "src/lib/generateExcerpts.js",
     "src/scripts/sortedNewsletters.js",
-    "next.config.cjss",
-    "src/components/Demos/FullscreenShader/withContext"
+    "next.config.cjss"
   ]
 }
