--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
     "three-stdlib": "^2.35.14",
     "tunnel-rat": "^0.1.2",
     "use-local-storage-state": "^19.4.0",
-    "yet-another-react-lightbox": "^3.9.0"
+    "yet-another-react-lightbox": "^3.9.0",
+    "yuka": "^0.7.8"
   },
   "devDependencies": {
     "@aws-sdk/client-lambda": "^3.427.0",
@@ -101,6 +102,7 @@
     "@types/react-slider": "^1.3.1",
     "@types/three": "^0.146.0",
     "@types/yargs": "^17.0.33",
+    "@types/yuka": "^0.7.4",
     "autoprefixer": "^10.4.14",
     "axios": "^1.5.1",
     "case": "^1.6.3",
