--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "next": "^14.2.15",
     "next-seo": "^4.26.0",
     "next-themes": "^0.2.1",
+    "noisejs": "^2.1.0",
     "postprocessing": "^6.36.7",
     "r3f-perf": "^7.2.3",
     "react": "^18.3.1",
@@ -72,6 +73,7 @@
     "react-photo-album": "^2.2.2",
     "react-resizable-panels": "^2.1.7",
     "react-slider": "^2.0.4",
+    "simplenoise": "^1.0.1",
     "simplex-noise": "^4.0.3",
     "three": "^0.173.0",
     "three-custom-shader-material": "^6.3.0",
@@ -94,6 +96,7 @@
     "@types/inquirer": "^9.0.3",
     "@types/mime": "^3.0.1",
     "@types/node": "^22.7.7",
+    "@types/noisejs": "^2.1.0",
     "@types/probe-image-size": "^7.2.5",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^17.0.5",
