--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@react-three/postprocessing": "^2.19.1",
     "@react-three/rapier": "^1.5.0",
     "@replit/codemirror-lang-csharp": "^6.2.0",
+    "@types/poisson-disk-sampling": "^2.2.4",
     "@uiw/codemirror-theme-vscode": "^4.23.8",
     "@uiw/react-codemirror": "^4.23.8",
     "clsx": "^2.1.1",
@@ -60,6 +61,7 @@
     "next-seo": "^4.26.0",
     "next-themes": "^0.2.1",
     "noisejs": "^2.1.0",
+    "poisson-disk-sampling": "^2.3.1",
     "postprocessing": "^6.36.7",
     "r3f-perf": "^7.2.3",
     "react": "^18.3.1",
