--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@react-three/postprocessing": "^2.19.1",
     "@react-three/rapier": "^1.5.0",
     "@replit/codemirror-lang-csharp": "^6.2.0",
+    "@three.ez/instanced-mesh": "^0.3.0-alpha.9",
     "@types/poisson-disk-sampling": "^2.2.4",
     "@uiw/codemirror-theme-vscode": "^4.23.8",
     "@uiw/react-codemirror": "^4.23.8",
