add instancedMesh2 add/remove functionality

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,7 @@
 {
   "extends": "next/core-web-vitals",
-  "ignorePatterns": ["node_modules/", ".next/", "out/", "contentlayer/"]
+  "ignorePatterns": ["node_modules/", ".next/", "out/", "contentlayer/"],
+  "rules": {
+    "react/display-name": "off"
+  }
 }
