--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 /**/**/yarn-debug.log*
 /**/**/yarn-error.log*
 
+
 /**/**/.env
 /**/**/.env.local
 /**/**/.env.development.local
@@ -27,6 +28,7 @@
 /**/**/.vercel
 .velite
 .vercel
+.tsconfig.tsbuildinfo
 
 .terraform*
 terraform*
