--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@react-three/rapier": "^1.5.0",
     "@replit/codemirror-lang-csharp": "^6.2.0",
     "@three.ez/instanced-mesh": "^0.3.0-alpha.9",
+    "@types/gl-matrix": "^2.4.5",
     "@types/poisson-disk-sampling": "^2.2.4",
     "@uiw/codemirror-theme-vscode": "^4.23.8",
     "@uiw/react-codemirror": "^4.23.8",
@@ -49,6 +50,7 @@
     "form-data": "^4.0.0",
     "framer-motion": "^11.15.0",
     "fuzzysort": "^3.1.0",
+    "gl-matrix": "^3.4.3",
     "glsl-curl-noise2": "^0.0.4",
     "glsl-noise": "^0.0.0",
     "handlebars": "^4.7.7",
