--- a/package.json
+++ b/package.json
@@ -168,6 +168,7 @@
     "slugify": "^1.6.6",
     "tailwindcss": "^3.3.2",
     "threads": "^1.7.0",
+    "threads-plugin": "^1.4.0",
     "to-vfile": "^7.2.3",
     "tsx": "^4.7.1",
     "twitter-api-v2": "^1.12.7",
