--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "@react-three/postprocessing": "^2.19.1",
     "@react-three/rapier": "^1.5.0",
     "@replit/codemirror-lang-csharp": "^6.2.0",
+    "@spissvinkel/alea": "^1.2.1",
     "@three.ez/instanced-mesh": "^0.3.0-alpha.9",
     "@types/gl-matrix": "^2.4.5",
     "@types/poisson-disk-sampling": "^2.2.4",
     "@uiw/codemirror-theme-vscode": "^4.23.8",
     "@uiw/react-codemirror": "^4.23.8",
+    "alea": "^1.0.1",
     "clsx": "^2.1.1",
     "codemirror": "^6.0.1",
     "date-fns": "2.21.3",
@@ -78,10 +80,11 @@
     "react-photo-album": "^2.2.2",
     "react-resizable-panels": "^2.1.7",
     "react-slider": "^2.0.4",
+    "seedrandom": "^3.0.5",
     "simplenoise": "^1.0.1",
     "simplex-noise": "^4.0.3",
-    "three": "^0.173.0",
     "threads": "^1.7.0",
+    "three": "^0.173.0",
     "three-custom-shader-material": "^6.3.0",
     "three-stdlib": "^2.35.14",
     "tunnel-rat": "^0.1.2",
@@ -109,6 +112,7 @@
     "@types/react-infinite-scroller": "^1.2.3",
     "@types/react-modal": "^3.16.1",
     "@types/react-slider": "^1.3.1",
+    "@types/seedrandom": "^3.0.8",
     "@types/three": "^0.146.0",
     "@types/yargs": "^17.0.33",
     "@types/yuka": "^0.7.4",
