port dungeon visualization/generation algorith

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "clsx": "^2.1.1",
     "codemirror": "^6.0.1",
     "date-fns": "2.21.3",
+    "delaunator": "^5.0.1",
     "ecctrl": "^1.0.92",
     "fast-2d-poisson-disk-sampling": "^1.0.3",
     "form-data": "^4.0.0",
@@ -103,6 +104,7 @@
     "@testing-library/react": "^13.4.0",
     "@tsconfig/node16": "^1.0.3",
     "@types/cli-progress": "^3.11.0",
+    "@types/delaunator": "^5.0.3",
     "@types/inquirer": "^9.0.3",
     "@types/mime": "^3.0.1",
     "@types/node": "^22.7.7",
