--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@aws-sdk/client-s3": "^3.215.0",
     "@codemirror/lang-cpp": "^6.0.2",
     "@dnd-kit/core": "^6.3.1",
+    "@formkit/drag-and-drop": "^0.4.2",
     "@headlessui/react": "^2.2.0",
     "@next/bundle-analyzer": "^15.1.2",
     "@react-hook/window-size": "^3.1.1",
