add giant arm controllers

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@react-three/fiber": "^8.17.14",
     "@react-three/postprocessing": "^2.19.1",
     "@react-three/rapier": "^1.5.0",
+    "@recast-navigation/three": "^0.39.0",
     "@replit/codemirror-lang-csharp": "^6.2.0",
     "@spissvinkel/alea": "^1.2.1",
     "@three.ez/instanced-mesh": "^0.3.0-alpha.9",
@@ -83,6 +84,7 @@
     "react-photo-album": "^2.2.2",
     "react-resizable-panels": "^2.1.7",
     "react-slider": "^2.0.4",
+    "recast-navigation": "^0.39.0",
     "seedrandom": "^3.0.5",
     "simplenoise": "^1.0.1",
     "simplex-noise": "^4.0.3",
