add more character controllers

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,8 @@
   "extends": "next/core-web-vitals",
   "ignorePatterns": ["node_modules/", ".next/", "out/", "contentlayer/"],
   "rules": {
-    "react/display-name": "off"
+    "react/display-name": "off",
+    "react/rules-of-hooks": "off",
+    "react/exhaustive-deps": "off"
   }
 }
