add another grass shader

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,6 +42,7 @@
     "src/scripts/createRedirects.js",
     "src/lib/generateExcerpts.js",
     "src/scripts/sortedNewsletters.js",
-    "next.config.cjss"
+    "next.config.cjss",
+    "src/canvas/Scenes/Grass/EbenezerGrass"
   ]
 }
