--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@arancini/react": "^8.0.0",
     "@aws-sdk/client-s3": "^3.215.0",
     "@codemirror/lang-cpp": "^6.0.2",
     "@dnd-kit/core": "^6.3.1",
@@ -46,6 +47,7 @@
     "@uiw/codemirror-theme-vscode": "^4.23.8",
     "@uiw/react-codemirror": "^4.23.8",
     "alea": "^1.0.1",
+    "arancini": "^8.0.0",
     "clsx": "^2.1.1",
     "codemirror": "^6.0.1",
     "date-fns": "2.21.3",
@@ -89,6 +91,7 @@
     "seedrandom": "^3.0.5",
     "simplenoise": "^1.0.1",
     "simplex-noise": "^4.0.3",
+    "suspend-react": "^0.1.3",
     "threads": "^1.7.0",
     "three": "^0.173.0",
     "three-custom-shader-material": "^6.3.0",
