refactor scene with loading state to be included in ThreeFiberLayout

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,7 +41,6 @@
     ".velite",
     "src/scripts/createRedirects.js",
     "src/lib/generateExcerpts.js",
-    "src/scripts/sortedNewsletters.js",
-    "next.config.cjss"
+    "src/scripts/sortedNewsletters.js"
   ]
 }
