add old neural network code back to repository

--- a/package.json
+++ b/package.json
@@ -48,8 +48,10 @@
     "@uiw/react-codemirror": "^4.23.8",
     "alea": "^1.0.1",
     "arancini": "^8.0.0",
+    "chart.js": "^4.4.8",
     "clsx": "^2.1.1",
     "codemirror": "^6.0.1",
+    "d3": "^7.9.0",
     "date-fns": "2.21.3",
     "delaunator": "^5.0.1",
     "ecctrl": "^1.0.92",
@@ -87,6 +89,7 @@
     "react-photo-album": "^2.2.2",
     "react-resizable-panels": "^2.1.7",
     "react-slider": "^2.0.4",
+    "reagraph": "^4.21.5",
     "recast-navigation": "^0.39.0",
     "seedrandom": "^3.0.5",
     "simplenoise": "^1.0.1",
@@ -110,7 +113,9 @@
     "@tailwindcss/typography": "^0.5.13",
     "@testing-library/react": "^13.4.0",
     "@tsconfig/node16": "^1.0.3",
+    "@types/chart.js": "^2.9.41",
     "@types/cli-progress": "^3.11.0",
+    "@types/d3": "^7.4.3",
     "@types/delaunator": "^5.0.3",
     "@types/inquirer": "^9.0.3",
     "@types/mime": "^3.0.1",
