pin uiw-codemirror version

--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "@three.ez/instanced-mesh": "^0.3.0-alpha.9",
     "@types/gl-matrix": "^2.4.5",
     "@types/poisson-disk-sampling": "^2.2.4",
-    "@uiw/codemirror-theme-vscode": "^4.23.10",
-    "@uiw/react-codemirror": "^4.23.10",
+    "@uiw/codemirror-theme-vscode": "4.23.8",
+    "@uiw/react-codemirror": "4.23.8",
     "alea": "^1.0.1",
     "arancini": "^8.0.0",
     "clsx": "^2.1.1",
